--- a/.github/workflows/githubaction-scheduled-plan.yml
+++ b/.github/workflows/githubaction-scheduled-plan.yml
@@ -75,6 +75,7 @@ jobs:
           TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
           GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
           GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+          OPENTOFU_VERSION: ${{ inputs.tofu_version }}
       # Install the latest version of Tofu CLI
       - name: Setup Tofu
         uses: opentofu/setup-opentofu@v1
