fix: missing tofu version
Signed-off-by: Patrick Robinson <patrick.robinson@bertelsmann.de>

--- a/.github/workflows/githubaction-scheduled-plan.yml
+++ b/.github/workflows/githubaction-scheduled-plan.yml
@@ -54,6 +54,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.10.6
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -65,6 +66,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.10.6
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
