--- a/.github/workflows/githubaction-scheduled-plan.yml
+++ b/.github/workflows/githubaction-scheduled-plan.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   tofu:
     name: 'Plan Tofu'
-    runs-on: ubuntu-latest
+    runs-on: arvato
     permissions:
       id-token: write
       contents: read
